third_party/rust/cxx/v1/crate/tests/ui/derive_noncopy.stderr
error[E0204]: the trait `Copy` may not be implemented for this type
 --> tests/ui/derive_noncopy.rs:3:14
  |
3 |     #[derive(Copy)]
  |              ^^^^
4 |     struct TryCopy {
5 |         other: Other,
  |         ------------ this field does not implement `Copy`
