third_party/rust/cxx/v1/crate/tests/ui/derive_noncopy.rs
#[cxx::bridge]
mod ffi {
    #[derive(Copy)]
    struct TryCopy {
        other: Other,
    }

    struct Other {
        x: usize,
    }
}

fn main() {}
